# Bouncing-Beasts-Shootout

./: .gitignore  CMakeLists.txt  Kevin_Wander_Fall_24.sln  README.MD
MyGame/: BulletWound.cpp  BulletWound.h  CMakeLists.txt  CatLevel.cpp  CatLevel.h  Enemy.cpp  Enemy.h  GoblinLevel.cpp  GoblinLevel.h  Gun.cpp  Gun.h  Level.cpp  Level.h  MonsterLevel.cpp  MonsterLevel.h  MyGame.cpp  MyGame.vcxproj  MyGame.vcxproj.filters  NumberDisplay.cpp  NumberDisplay.h
Quad/: CMakeLists.txt  Cursor.cpp  Cursor.h  CursorImpl.h  EntryPoint.h  Image.cpp  Image.h  ImageImpl.h  KeyCodes.h  Quad.vcxproj  Quad.vcxproj.filters  QuadApplication.cpp  QuadApplication.h  QuadEvents.cpp  QuadEvents.h  QuadUtilities.h  QuadWindow.cpp  QuadWindow.h  Renderer.cpp  Renderer.h  RendererImpl.h  Shaders.cpp  Shaders.h  ShadersImpl.h  Unit.cpp  Unit.h  WindowImpl.h  pch.h
Quad/QuadAssets/Shaders/: defaultFragmentShader.glsl  defaultVertexShader.glsl
Quad/codeGLFW/: GLFWCursor.cpp  GLFWCursor.h  WindowGLFW.cpp  WindowGLFW.h
Quad/codeOpenGL/: OpenGLImage.cpp  OpenGLImage.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShaders.cpp  OpenGLShaders.h
Quad/include/: Quad.h
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
glfw_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GLFW.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake
glfw_build/src/: cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  update_mappings.vcxproj  update_mappings.vcxproj.filters
glfw_build/src/Debug/: glfw3dll.exp
glfw_build/src/glfw.dir/Debug/: glfw3.dll.recipe  glfw3.ilk
glfw_build/src/glfw.dir/Debug/glfw.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  glfw.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
stbi/: stbi.vcxproj
